Alpha 0.1.8.19
- Fixed crash on startup if the custom translation file contained invalid lines. Thanks, @taoxiaobai, for the bug report!

Alpha 0.1.8.18
- Fixed bug with the latest version of Towny. Thanks, @Master, for the bug report!
- Added some methods to the Commander to make extending this plugin a bit easier (specifically for instances).
- Fixed stained glass (panes and blocks) changing colors in rotating door types (e.g. Doors) in 1.12. Thanks, @MrLoenkie, for the bug report!

Alpha 0.1.8.17
- Changed logging level of messages about no items being blacklisted or whitelisted from WARN to INFO. Thanks, @SlimeDog for the report!
- Drawbridges will now figure out which way to open when created in their open-position (i.e. flat). Thanks, @BobbyMC for the report!
- Fixed portcullises showing incorrect open direction options in the GUI. Thanks, @SlimeDog for the report!
- Fixed drawbridges showing invalid open direction options in the GUI.
- Added RedProtect support. Thanks, @Rebellion for the suggestion!
- Fixed default direction selection for doors that are open when toggled first.
- Added option to disable logging to the log file. Thanks, @SlimeDog for the suggestion!
- Added DoorEventTogglePrepare, DoorEventToggleStart, and DoorEventToggleEnd, which are fired when a door is toggled. DoorEventTogglePrepare is Cancellable, the other two are not.
- Fixed some issues with the resource pack system. Including an issue where disabling it actually enabled it and the other way round... Whoops! Thanks, @giovanny196, for the bug report!

Alpha 0.1.8.16
- Updated to the latest version of XMaterial, which is supposed to bring some performance improvements in the areas concerning materials.
- Added beehive and bee nest to the material blacklist.
- Fixed bypass permission node for toggling doors not allowing people to toggle doors via commands if they did not own them. Thanks, @ReshiStar for the bug report.